dyn-inventory/tests/failures/init_name_invalid_ident.stderr
error: expected `<`
  --> tests/failures/init_name_invalid_ident.rs:14:7
   |
14 |     My-Handle<T: Plugin> {
   |       ^
